--- a/app/src/main/res/layout/activity_student_class_list.xml
+++ b/app/src/main/res/layout/activity_student_class_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,10 +10,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/space_10dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:id="@+id/toolbar"
         android:background="@color/colorPrimaryDark"
-        android:layout_height="100dp">
+        android:orientation="vertical"
+        android:padding="@dimen/space_10dp">
 
         <TextView
             android:id="@+id/subLabel"
@@ -30,17 +32,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Student DashBoard"
+            android:text="Class list"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
     </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/student_menu_rv"
+        android:id="@+id/classListRv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/menu_row"
+        android:layout_below="@id/toolbar"
         android:padding="@dimen/space_10dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/menu_row" />
 
-</LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="@dimen/size70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:clickable="true"
+        android:id="@+id/addClass"
+        android:visibility="gone"
+        android:src="@drawable/ic_baseline_add_24"
+        android:layout_margin="@dimen/space_10dp"
+        android:theme="@style/FabTheme"
+        android:layout_height="@dimen/size70dp"/>
+
+</RelativeLayout>
