--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_margin="10dp"
         android:gravity="center_horizontal"
         android:id="@+id/user_name"
-        android:text="Cat paws."
+        android:text="CatPAWS."
         android:textSize="24dp"
         android:textStyle="bold"
         android:visibility="visible" />
