--- a/app/src/main/res/layout/activity_professor_bar_code_generator.xml
+++ b/app/src/main/res/layout/activity_professor_bar_code_generator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_bg"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ProfessorDashBoard">
 
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <ImageView
-        android:src="@drawable/qr"
+        android:id="@+id/qr"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
