--- a/app/src/main/res/layout/activity_student_dash_board.xml
+++ b/app/src/main/res/layout/activity_student_dash_board.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Student DashBoard"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
