Updated Final Changes

--- a/app/src/main/res/layout/activity_professor_bar_code_generator.xml
+++ b/app/src/main/res/layout/activity_professor_bar_code_generator.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Some class "
+            android:text="QR Code"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
