--- a/app/src/main/res/layout/activity_professor_attendance_list.xml
+++ b/app/src/main/res/layout/activity_professor_attendance_list.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Some class"
+            android:text="Attendance Status"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
